<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">exam-reminder</string>
    <string name="pref_category_integration">Integration</string>
    <string name="pref_show_exam_notifications">Show Exam Notifications</string>
    <string name="pref_show_exam_notifications_description">Show an Android notification if a new exam has been found
    </string>
    <string name="pref_use_android_calendar">Use Android Calendar</string>
    <string name="pref_use_android_calendar_description">Add exams to the Android calendar</string>
    <string name="pref_category_update">Updates</string>
    <string name="pref_update_frequency">Update Frequency</string>
    <string name="once_a_day">Once a day</string>
    <string name="every_2_days">Every 2 days</string>
    <string name="every_3_days">Every 3 days</string>
    <string name="once_a_week">Once a week</string>
    <string name="settings">Settings</string>
    <string name="pref_update_now">Update Now</string>
    <string name="pref_update_now_summery">Last update:</string>
    <string name="never">Never</string>
    <string name="pref_update_wifi_only">Update on Wifi only</string>
    <string name="pref_update_time">Time to run update</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="days">days</string>
    <string name="mame">Name</string>
    <string name="id">ID</string>
    <string name="type">Type</string>
    <string name="term">Term</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="register_deadline">Deadline\nRegister</string>
    <string name="cancel_deadline">Deadline\nCancel</string>
    <string name="participants">Participants</string>
    <string name="lecturer">Lecturer</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="exams">Exams</string>
    <string name="pref_use_tablet_layout">Use tablet layout</string>
    <string name="automatic">Automatic</string>
    <string name="always">Always</string>
    <string name="always_landscape">When in landscape</string>
    <string name="OK">OK</string>
    <string name="error">Error</string>
    <string name="search_error">An error occured while searching. Please make sure that you are connected to the
        internet.
    </string>
    <string name="course_already_added">This course has already been added</string>
    <string name="update_started">Update started in background</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>
    <string name="rosmarin">Rosmarin Thomas</string>
    <string name="pail">Pail Daniel</string>
    <string name="app_design">App Design</string>
    <string name="icon_design">Icon Design</string>
    <string name="version_with_param">Version %s</string>
    <string name="libs">3rd party libraries</string>
    <string name="abs_with_link"><a href="http://actionbarsherlock.com/">ActionBarSherlock</a></string>
    <string name="cwak_with_link"><a href="https://github.com/commonsguy/cwac-wakeful">CWAC WakefulIntentService</a></string>
    <string name="gson_with_link"><a href="http://code.google.com/p/google-gson/">Gson</a></string>
    <string name="mca_with_link"><a href="https://github.com/ManuelPeinado/MultiChoiceAdapter">MultiChoiceAdapter</a></string>
    <string name="spl_with_link"><a href="https://github.com/MobiDevelop/android-split-pane-layout">Split Pane Layout</a></string>
    <string name="vpi_with_link"><a href="http://viewpagerindicator.com/">ViewpagerIndicator</a></string>
    <string name="search_homepage_with_link">Searchprovider: <a href="http://search.tugraz.at">search.tugraz.at</a></string>
    <string name="special_thanks">Special Thanks</string>
    <string name="thanks_text">To Petra, Delonghi, Saeco,  and all the other coffee machines\nwhich kept us alive while making this app!</string>
    <string name="homepage_with_link"><a href="https://github.com/xorrizon/android-tug-exam-reminder">Homepage</a></string>
    <string name="pref_android_calendar_to_use">Calendar to use</string>

</resources>
