<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
                  android:id="@+id/about_details_container"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" >
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/icon" />
        <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_with_param" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage_with_link" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:text="@string/search_homepage_with_link" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/developers" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rosmarin" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pail" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/app_design" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rosmarin" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pail" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/libs" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/abs_with_link" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/cwak_with_link" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/gson_with_link" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/mca_with_link" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/spl_with_link" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/vpi_with_link" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/special_thanks" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanks_text" />


    </LinearLayout>
</ScrollView>