<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/mame" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/course_name" android:text="@string/mame" />
        </TableRow>
        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/id" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/course_id" android:text="@string/id" />
        </TableRow>
        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/type" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/course_type" android:text="@string/type" />
        </TableRow>
        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/term" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/course_term" android:text="@string/term" />
        </TableRow>
        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/lecturer" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/course_lecturer" android:text="@string/lecturer" />
        </TableRow>

    </TableLayout>
    <Button android:id="@+id/btn_open_in_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:text="@string/open_in_browser" />
    <TextView android:text="@string/exams"
        android:padding="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        />

</LinearLayout>